feat: Add authentication, admin terminal, and db reset